@@ -20,8 +20,19 @@ import scipy as S
 import scipy.linalg as LIN
 import scipy.sparse as sp
 
-from assimulo.exception import *
-from assimulo.ode import *
+from assimulo.exception import (
+    AssimuloException,
+    Explicit_ODE_Exception,
+    Implicit_ODE_Exception,
+    AssimuloRecoverableError
+)
+from assimulo.ode import (
+    NORMAL,
+    ID_PY_OK,
+    ID_PY_EVENT,
+    ID_PY_COMPLETE,
+    SCREAM
+)
 
 from assimulo.explicit_ode import Explicit_ODE
 from assimulo.implicit_ode import Implicit_ODE
@@ -35,7 +46,9 @@ class Radau5Error(AssimuloException):
             -2    : 'The solver took max internal steps but could not reach the next output time.',
             -3    : 'The step size became too small.',
             -4    : 'The matrix is repeatedly singular.',
-            -5    : 'Repeated unexpected step rejections.'}
+            -5    : 'Repeated unexpected step rejections.',
+            -10   : 'Unrecoverable exception encountered during callback to problem (right-hand side/jacobian).',
+            }
     
     def __init__(self, value, t = 0.0):
         self.value = value
@@ -121,9 +134,13 @@ class Radau5ODE(Radau_Common,Explicit_ODE):
                 ret = 0
                 try:
                     rhs = self.problem.rhs(t, y, self.sw)
-                except(N.linalg.LinAlgError,ZeroDivisionError,AssimuloRecoverableError):
+                    return rhs, [ret]
+                except BaseException as E:
                     rhs = y.copy()
-                    ret = -1 #Recoverable error
+                    if isinstance(E, (N.linalg.LinAlgError, ZeroDivisionError, AssimuloRecoverableError)): ## recoverable
+                        ret = -1 #Recoverable error
+                    else:
+                        ret = -2 #Non-recoverable
                 return rhs, [ret]
             self.f = f
             self.event_func = event_func
@@ -134,9 +151,12 @@ class Radau5ODE(Radau_Common,Explicit_ODE):
                 ret = 0
                 try:
                     rhs = self.problem.rhs(t, y)
-                except(N.linalg.LinAlgError,ZeroDivisionError,AssimuloRecoverableError):
+                except BaseException as E:
                     rhs = y.copy()
-                    ret = -1 #Recoverable error
+                    if isinstance(E, (N.linalg.LinAlgError, ZeroDivisionError, AssimuloRecoverableError)): ## recoverable
+                        ret = -1 #Recoverable error
+                    else:
+                        ret = -2 #Non-recoverable
                 return rhs, [ret]
             self.f = f
     
@@ -197,12 +217,18 @@ class Radau5ODE(Radau_Common,Explicit_ODE):
         Calculates the Jacobian, either by an approximation or by the user
         defined (jac specified in the problem class).
         """
-        jac = self.problem.jac(t,y)
-        
-        if isinstance(jac, sp.csc_matrix):
-            jac = jac.toarray()
-        
-        return jac
+        ret = 0
+        try:
+            jac = self.problem.jac(t,y)
+            if isinstance(jac, sp.csc_matrix):
+                jac = jac.toarray()
+        except BaseException as E:
+            jac = N.eye(len(y))
+            if isinstance(E, (N.linalg.LinAlgError, ZeroDivisionError, AssimuloRecoverableError)): ## recoverable
+                ret = -1 #Recoverable error
+            else:
+                ret = -2 #Non-recoverable
+        return jac, [ret]
             
     def integrate(self, t, y, tf, opts):
         ITOL  = 1 #Both atol and rtol are vectors
@@ -253,7 +279,7 @@ class Radau5ODE(Radau_Common,Explicit_ODE):
         elif flag == 2:
             flag = ID_PY_EVENT
         else:
-            raise Radau5Error(flag, t)
+            raise Radau5Error(flag, t) from None
         
         #Retrieving statistics
         self.statistics["nsteps"]      += iwork[16]
@@ -876,9 +902,16 @@ class Radau5DAE(Radau_Common,Implicit_ODE):
                 def event_func(t, y, yd):
                     return self.problem.state_events(t, y, self.sw)
             def f(t, y):
-                leny = self._leny
                 ret = 0
-                res = self.problem.res(t, y[:leny], y[leny:2*leny], self.sw)
+                try:
+                    leny = self._leny
+                    res = self.problem.res(t, y[:leny], y[leny:2*leny], self.sw)
+                except BaseException as E:
+                    res = y[:leny].copy()
+                    if isinstance(E, (N.linalg.LinAlgError, ZeroDivisionError, AssimuloRecoverableError)): ## recoverable
+                        ret = -1 #Recoverable error
+                    else:
+                        ret = -2 #Non-recoverable
                 return N.append(y[leny:2*leny],res), [ret]
             self._f = f
             self.event_func = event_func
@@ -886,9 +919,16 @@ class Radau5DAE(Radau_Common,Implicit_ODE):
             self.g_old = self.event_func(self.t, self.y, self.yd)
         else:
             def f(t, y):
-                leny = self._leny
                 ret = 0
-                res = self.problem.res(t, y[:leny], y[leny:2*leny])
+                try:
+                    leny = self._leny
+                    res = self.problem.res(t, y[:leny], y[leny:2*leny])
+                except BaseException as E:
+                    res = y[:leny].copy()
+                    if isinstance(E, (N.linalg.LinAlgError, ZeroDivisionError, AssimuloRecoverableError)): ## recoverable
+                        ret = -1 #Recoverable error
+                    else:
+                        ret = -2 #Non-recoverable
                 return N.append(y[leny:2*leny],res), [ret]
             self._f = f
     
